[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/weapons/emitables/fireball_2.png" type="Texture" id=1]
[ext_resource path="res://sprites/weapons/emitables/shootgun_pellet.png" type="Texture" id=2]
[ext_resource path="res://scripts/gameplay/projectiles/bullet.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2 )

[node name="pellet" type="Area2D"]
script = ExtResource( 3 )
knockback = 250.0

[node name="spr" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="fire_ball" type="Light2D" parent="."]
texture = ExtResource( 1 )
color = Color( 1, 0, 0, 1 )
range_layer_min = -1

[node name="end" type="Timer" parent="."]
wait_time = 30.0

[node name="vis" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="end" to="." method="_on_end_timeout"]
[connection signal="screen_exited" from="vis" to="." method="_on_vis_screen_exited"]
